--- a/index.html
+++ b/index.html
@@ -4349,8 +4349,8 @@ for Topologically Varying Neural Radiance Fields</span>
             <tr>
               <td style="padding:0px">
                 <br>
-                <p style="text-align:right;font-size:small;">
-                  Website taken from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barren's source code</a>. 
+                <p style="text-align:left;font-size:small;">
+                  Website source code taken from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's</a>. 
                 </p>
               </td>
             </tr>
