--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p style="text-align:center">
                   <a href="mailto:colinwcommans@gmail.com">Email</a> &nbsp;/&nbsp;
                   <a href="data/resume.pdf">Resume</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/ccommans/">Github</a>
+                  <a href="https://github.com/ccommans/">Github</a> &nbsp;/&nbsp;
 		  <a href="https://linkedin.com/in/colin-commans-2009052a6/">LinkedIn</a>
                 </p>
               </td>
