--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="google-site-verification" content="10ezSJni_X0NOaiVPeFYWnqqG6KvSiDW4jDT2rtDnZE" />
 
     <title>Colin Commans</title>
 
