--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	            function lsgan_stop() {
 	              document.getElementById('emnist_image').style.opacity = "0";
 	            }
-	            alignerf_stop()
+	            lsgan_stop()
 	          </script>
 	        </td>
                   <td style="padding:8px;width:80%;vertical-align:middle">
