--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                       <span class="papertitle">LSGAN Project</span>
                     </a>
                     <br>
-                    <strong>Deep Learning, PyTorch</strong>
+                    <strong>PyTorch, GANs</strong>
                     <br>
                     <p>
                       Re-implemented the Least Squares Generative Adversarial Network (LSGAN) framework, exploring challenges such as vanishing gradients and mode collapse. Experimented with different parameterizations and loss functions (Hinge, L1) on datasets like EMNIST, KTH-TIPS, and Tiny ImageNet.
@@ -84,36 +84,33 @@
                   </td>
                 </tr> 
 		  
-		<tr onmouseout="power_stop()" onmouseover="power_start()">
-                  <td style="padding:16px;width:20%;vertical-align:middle">
-                    <div class="one">
-                      <div class="two" id='power_image'>
-                        <video width="100%" height="100%" muted autoplay loop>
-                          <source src="images/power.mp4" type="video/mp4">
-                          Your browser does not support the video tag.
-                        </video>
-                      </div>
-                      <img src="images/power.png" width="160" alt="Project visual">
-                    </div>
-                    <script type="text/javascript">
-                      function power_start() {
-                        document.getElementById('power_image').style.opacity = "1";
-                      }
-                      function power_stop() {
-                        document.getElementById('power_image').style.opacity = "0";
-                      }
-                      power_stop();
-                    </script>
-                  </td>
+		<tr onmouseout="txt_stop()" onmouseover="txt_start()">
+	        <td style="padding:16px;width:20%;vertical-align:middle">
+	          <div class="one">
+	            <div class="two" id='textsent_image'>
+	              <img src='images/textsent_after.png' width="110"></div>
+	            <img src='images/textsent_before.png' width="110">
+	          </div>
+	          <script type="text/javascript">
+	            function txt_start() {
+	              document.getElementById('textsent_image').style.opacity = "1";
+	            }
+	
+	            function txt_stop() {
+	              document.getElementById('textsent_image').style.opacity = "0";
+	            }
+	            txt_stop()
+	          </script>
+	        </td>
                   <td style="padding:8px;width:80%;vertical-align:middle">
-                    <a href="https://github.com/ccommans/sentiment-analysis">
+                    <a href="https://github.com/ccommans/text-sent-pred">
                       <span class="papertitle">Predictive Model: Sentiment Analysis of Text</span>
                     </a>
                     <br>
-                    <strong>Python, scikit-learn, Flask</strong>
+                    <strong>scikit-learn, Flask</strong>
                     <br>
                     <p>
-                      Developed a sentiment analysis model to predict positive or negative text from Amazon book reviews. Data preprocessing, model optimization via GridSearch, and a Flask web app enable real-time sentiment predictions. Achieved an F1 score of 82%.
+                      Developed a sentiment analysis model to predict positive or negative text from Amazon book reviews. Data preprocessing, model optimization via GridSearch, and a Flask web app enable real-time sentiment predictions.
                     </p>
                   </td>
                 </tr>
@@ -156,16 +153,16 @@
                   </td>
                   <td style="padding:8px;width:80%;vertical-align:middle">
                     <ul>
-                      <li>Calculus on Manifolds (MATH 150B)</li>
-                      <li>Differential Geometry (MATH 150A)</li>
-                      <li>Abstract Algebra I (MATH 100A)</li>
-                      <li>Foundations of Real Analysis I (MATH 140A)</li>
-                      <li>Honors Linear Algebra (MATH 31AH)</li>
-                      <li>Design & Analysis of Algorithms (CSE 101)</li>
-                      <li>Advanced Data Structures (CSE 100R)</li>
-                      <li>Theory of Computation (CSE 105)</li>
-                      <li>Intro to Deep Learning & Applications (ECE 176)</li>
-                      <li>Introduction to Probability (MATH 180A)</li>
+                      <li>Differential Geometry</li>
+                      <li>Abstract Algebra</li>
+                      <li>Real Analysis</li>
+                      <li>Complex Analysis</li>
+		      <li>Topology</li>
+		      <li>Probability</li>
+                      <li>Design & Analysis of Algorithms</li>
+                      <li>Advanced Data Structures</li>
+                      <li>Deep Learning</li>
+		      <li>Machine Learning</li>
                     </ul>
                   </td>
                 </tr>
@@ -200,7 +197,7 @@
             <tr>
               <td align="center" style="padding:16px;width:20%;vertical-align:middle">
 						     <div class="colored-box" style="background-color: #edd892;">
-								 <h2>Teaching</h2>
+								 <h2>Personal</h2>
 								 </div>
               </td>
               <td style="padding:8px;width:80%;vertical-align:center">
