--- a/index.html
+++ b/index.html
@@ -152,17 +152,20 @@
                     </div>
                   </td>
                   <td style="padding:8px;width:80%;vertical-align:middle">
-                    <ul>
-                      <li>Differential Geometry</li>
-                      <li>Abstract Algebra</li>
-                      <li>Real Analysis</li>
-                      <li>Complex Analysis</li>
-		      <li>Topology</li>
-		      <li>Probability</li>
-                      <li>Design & Analysis of Algorithms</li>
-                      <li>Advanced Data Structures</li>
+                    <ul style="columns: 2;">
                       <li>Deep Learning</li>
-		      <li>Machine Learning</li>
+                      <li>Machine Learning</li>
+                      <li>Statistical Learning</li>
+                      <li>(Un)Constrained Optimization</li>
+		      <li>(Non)Linear Optimization</li>
+		      <li>Data Structures & Algorithms</li>
+		      <li>Operating Systems</li>
+                      <li>Probability & Statistics</li>
+                      <li>Differential Geometry</li>
+                      <li>Complex Analysisg</li>
+		      <li>Real Analysis</li>
+		      <li>Abstract Algebra</li>
+		      <li>Topology</li>
                     </ul>
                   </td>
                 </tr>
