--- a/index.html
+++ b/index.html
@@ -151,15 +151,14 @@
                       <h2>Selected Coursework</h2>
                     </div>
                   </td>
-                  <td style="padding:8px;width:80%;vertical-align:middle">
-                    <ul style="columns: 2;">
+                  <td style="padding:8px;width:80%;height:100px;vertical-align:middle">
+                    <ul>
                       <li>Deep Learning</li>
                       <li>Machine Learning</li>
                       <li>Statistical Learning</li>
                       <li>(Un)Constrained Optimization</li>
 		      <li>(Non)Linear Optimization</li>
 		      <li>Data Structures & Algorithms</li>
-		      <li>Operating Systems</li>
                       <li>Probability & Statistics</li>
                       <li>Differential Geometry</li>
                       <li>Complex Analysisg</li>
