--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	          </script>
 	        </td>
                   <td style="padding:8px;width:80%;vertical-align:middle">
-                    <a href="https://github.com/ccommans/LSGAN-project">
+                    <a href="https://github.com/ccommans/LSGAN">
                       <span class="papertitle">LSGAN Project</span>
                     </a>
                     <br>
@@ -151,7 +151,7 @@
                       <h2>Selected Coursework</h2>
                     </div>
                   </td>
-                  <td style="padding:8px;width:80%;height:100px;vertical-align:middle">
+                  <td style="padding:8px;width:80%;height:200px;vertical-align:middle">
                     <ul>
                       <li>Deep Learning</li>
                       <li>Machine Learning</li>
