--- a/index.html
+++ b/index.html
@@ -147,11 +147,11 @@
 
                 <tr>
                   <td align="center" style="padding:16px;width:20%;vertical-align:middle">
-                    <div class="colored-box" style="background-color: #aaba9e;">
+                    <div class="colored-box" style="background-color: #aaba9e;height: 200px;">
                       <h2>Selected Coursework</h2>
                     </div>
                   </td>
-                  <td style="padding:8px;width:80%;height:200px;vertical-align:middle">
+                  <td style="padding:8px;width:80%;vertical-align:middle">
                     <ul>
                       <li>Deep Learning</li>
                       <li>Machine Learning</li>
