--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
                 <tr>
                   <td align="center" style="padding:16px;width:20%;vertical-align:middle">
-                    <div class="colored-box" style="background-color: #aaba9e;height: 200px;">
+                    <div class="colored-box" style="background-color: #aaba9e;height: 200px;vertical-align: middle;">
                       <h2>Selected Coursework</h2>
                     </div>
                   </td>
