--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
 
                 <tr>
                   <td align="center" style="padding:16px;width:20%;vertical-align:middle">
-                    <div class="colored-box" style="background-color: #aaba9e;height: 200px;vertical-align: middle;">
-                      <h2>Selected Coursework</h2>
+                    <div class="colored-box" style="background-color: #aaba9e; height:200px; display: table-cell; vertical-align: middle;">
+                      <h2 style="margin: 0;">Selected Coursework</h2>
                     </div>
                   </td>
                   <td style="padding:8px;width:80%;vertical-align:middle">
