--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 	        </td>
                   <td style="padding:8px;width:80%;vertical-align:middle">
                     <a href="https://github.com/ccommans/LSGAN">
-                      <span class="papertitle">LSGAN Project</span>
+                      <span class="papertitle">LSGAN</span>
                     </a>
                     <br>
                     <strong>PyTorch, GANs</strong>
@@ -161,7 +161,7 @@
 		      <li>Data Structures & Algorithms</li>
                       <li>Probability & Statistics</li>
                       <li>Differential Geometry</li>
-                      <li>Complex Analysisg</li>
+                      <li>Complex Analysis</li>
 		      <li>Real Analysis</li>
 		      <li>Abstract Algebra</li>
 		      <li>Topology</li>
