--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -86,9 +86,9 @@
 
   <h1>The Encyclopedia Project</h1>
   <p class="description">
-    This is a collection of lecture notes of math courses I have taken in undergrad, formatted from my original handwritten notes with additional discussions or examples from me which helped my understanding. 
-    When I was taking these courses, resources like <a href="https://kconrad.math.uconn.edu/blurbs/">Keith Conrad's</a> were crucial for my learning, and in some sense this project is an attempt to pay it forward, if not a blantant copy.
-    I have written the proofs in a way that helps me best understand the entire reasoning, and in particular I try to avoid phrases like "clear" and "it is obvious" unless I truly feel fully that spelling out the details is a distraction from the proof's main argument.
+    This is a collection of lecture notes of math courses I have taken in undergrad, typeset from my original handwritten notes with additional discussions or examples from me which helped my understanding. 
+    When I was taking these courses, resources like <a href="https://kconrad.math.uconn.edu/blurbs/">Keith Conrad's</a> were crucial for my learning, and in some sense this project is an attempt to pay it forward, if not be a blantant copy.
+    I have written the proofs in a way that helps me best understand the entire reasoning, and in particular I try to avoid phrases like "clear" and "it is obvious" unless I truly feel that fully spelling out the details is a distraction from the proof's main argument.
     Please email me if you find any mistakes or have requests for different topics to be covered here; I fully intend to keep producing these notes for my future independent studies. 
     Also, the order of topics loosely follows how I took them in undergrad, but beyond that there is no information to extrapolate from how the courses are organized (e.g. difficulty, personal preference, rigor, etc.).
   </p>
