--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -105,8 +105,8 @@
       </thead>
       <tbody>
         <tr>
-          <td>1 — Group Axioms</td>
-          <td><a href="notes/100A-1.pdf">PDF</a></td>
+          <td>1 — Review of Ring Theory </td>
+          <td><a href="encyclopedia/100c-1.pdf">PDF</a></td>
         </tr>
       </tbody>
     </table>
