--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -95,7 +95,7 @@
 
   <!-- =========================== -->
   <section class="course">
-    <h2>Algebra</h2>
+    <h2>Algebra III</h2>
     <table>
       <thead>
         <tr>
@@ -114,7 +114,7 @@
 
   <!-- =========================== -->
   <section class="course">
-    <h2>Real Analysis</h2>
+    <h2>Real Analysis II</h2>
     <table>
       <thead>
         <tr>
@@ -124,8 +124,8 @@
       </thead>
       <tbody>
         <tr>
-          <td>1 — The Real Numbers</td>
-          <td><a href="notes/140A-1.pdf">PDF</a></td>
+          <td>1 — Differentiability</td>
+          <td><a href="encyclopedia/140b-1.pdf">PDF</a></td>
         </tr>
       </tbody>
     </table>
