--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 								 <h2>Personal</h2>
 								 </div>
               </td>
-              <td style="padding:8px;width:80%;vertical-align:center">
-                <a href="encyclopedia.html">The Encyclopedia Project (Past Lecture Notes)</a>
+              <td style="padding:8px;width:80%;vertical-align:midle">
+                <a href="https://ccommans.github.io/encyclopedia">The Encyclopedia Project (Past Lecture Notes)</a>
               </td>
             </tr>
             
