--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 								 <h2>Personal</h2>
 								 </div>
               </td>
-              <td style="padding:8px;width:80%;vertical-align:midle">
+              <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="https://ccommans.github.io/encyclopedia">The Encyclopedia Project (Past Lecture Notes)</a>
               </td>
             </tr>
