--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -1,30 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="Author" content="Colin Commans">
   <title>The Encyclopedia Project</title>
   <style>
-    body {
-      font-family: Georgia, serif;
-      margin: 2rem;
-      color: #222;
-      line-height: 1.5;
-    }
-    h1 {
-      text-align: center;
-      font-size: 2.5rem;
-      margin-bottom: 0.5rem;
-    }
-    p.description {
-      text-align: left;
-      margin-bottom: 2rem;
-    }
-    .course {
-      margin-bottom: 3rem;
-    }
     .course h2 {
-      font-size: 1.75rem;
       margin-bottom: 0.5rem;
       border-bottom: 2px solid #444;
       padding-bottom: 0.25rem;
@@ -34,58 +14,23 @@
       border-collapse: collapse;
       margin-top: 0.5rem;
     }
-    th, td {
-      border: 1px solid #888;
-      padding: 0.75rem;
-      text-align: center;
-    }
-    th {
-      background-color: #f0f0f0;
-      font-weight: bold;
-    }
     td a {
-      color: #0066cc;
       text-decoration: none;
     }
     td a:hover {
       text-decoration: underline;
     }
-    @media (max-width: 600px) {
-      table, thead, tbody, th, td, tr {
-        display: block;
-      }
-      th {
-        position: absolute;
-        top: -9999px;
-        left: -9999px;
-      }
-      tr {
-        margin-bottom: 1rem;
-      }
-      td {
-        border: none;
-        position: relative;
-        padding-left: 50%;
-        text-align: left;
-      }
-      td:before {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 45%;
-        padding-left: 0.5rem;
-        white-space: nowrap;
-        font-weight: bold;
-      }
-      td:nth-of-type(1):before { content: "Section"; }
-      td:nth-of-type(2):before { content: "Notes"; }
+    th, td {
+      border: 1px solid;
+      padding: 1rem;
+      text-align: center;
     }
   </style>
 </head>
 <body>
 
-  <h1>The Encyclopedia Project</h1>
-  <p class="description">
+  <center><h1>The Encyclopedia Project</h1></center>
+  <p>
     This is a collection of lecture notes of math courses I have taken in undergrad, typeset from my original handwritten notes with additional discussions or examples from me which helped my understanding. 
     When I was taking these courses, resources like <a href="https://kconrad.math.uconn.edu/blurbs/">Keith Conrad's</a> were crucial for my learning, and in some sense this project is an attempt to pay it forward, if not be a blantant copy.
     I have written the proofs in a way that helps me best understand the entire reasoning, and in particular I try to avoid phrases like "clear" and "it is obvious" unless I truly feel that fully spelling out the details is a distraction from the proof's main argument.
@@ -95,18 +40,14 @@
 
   <!-- =========================== -->
   <section class="course">
-    <h2>Algebra III</h2>
+    <h2>Abstract Algebra (MATH 100)</h2>
     <table>
-      <thead>
-        <tr>
-          <th>Section</th>
-          <th>Lecture Notes</th>
-        </tr>
-      </thead>
       <tbody>
         <tr>
-          <td>1 — Review of Ring Theory </td>
-          <td><a href="encyclopedia/100c-1.pdf">PDF</a></td>
+          <td><a href="encyclopedia/100c-1.pdf">1 — Review of Ring Theory</a></td>
+          <td><a href="encyclopedia/100c-2.pdf">2 — </a></td>
+          <td><a href="encyclopedia/100c-3.pdf">3 — </a></td>
+          <td><a href="encyclopedia/100c-4.pdf">4 — </a></td>
         </tr>
       </tbody>
     </table>
@@ -114,18 +55,14 @@
 
   <!-- =========================== -->
   <section class="course">
-    <h2>Real Analysis II</h2>
+    <h2>Real Analysis (MATH 140)</h2>
     <table>
-      <thead>
-        <tr>
-          <th>Section</th>
-          <th>Lecture Notes</th>
-        </tr>
-      </thead>
       <tbody>
         <tr>
-          <td>1 — Differentiability</td>
-          <td><a href="encyclopedia/140b-1.pdf">PDF</a></td>
+          <td><a href="encyclopedia/140b-1.pdf">1 —Differentiation</a></td>
+          <td><a href="encyclopedia/140b-2.pdf">2 —  </a></td>
+          <td><a href="encyclopedia/140b-3.pdf">3 —  </a></td>
+          <td><a href="encyclopedia/140b-4.pdf">4 —  </a></td>
         </tr>
       </tbody>
     </table>
