--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -31,7 +31,7 @@
 
   <center><h1>The Encyclopedia Project</h1></center>
   <p>
-    This is a collection of lecture notes of math courses I have taken in undergrad, typeset from my original handwritten notes with additional discussions or examples from me which helped my understanding. 
+    This is a collection of lecture notes of math courses I have taken in undergrad at UCSD, typeset from my handwritten notes with additional discussions or examples from me which helped my understanding. 
     When I was taking these courses, resources like <a href="https://kconrad.math.uconn.edu/blurbs/">Keith Conrad's</a> were crucial for my learning, and in some sense this project is an attempt to pay it forward, if not be a blantant copy.
     I have written the proofs in a way that helps me best understand the entire reasoning, and in particular I try to avoid phrases like "clear" and "it is obvious" unless I truly feel that fully spelling out the details is a distraction from the proof's main argument.
     Please email me if you find any mistakes or have requests for different topics to be covered here; I fully intend to keep producing these notes for my future independent studies. 
