--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 	        <td style="padding:16px;width:20%;vertical-align:middle">
 	          <div class="one">
 	            <div class="two" id='cgan_image'>
-	              <img src='images/cgan_after.png' width="150"></div>
-	            <img src='images/cgan_before.png' width="150">
+	              <img src='images/cgan_after.jpg' width="150"></div>
+	            <img src='images/cgan_before.jpg' width="150">
 	          </div>
 	          <script type="text/javascript">
 	            function cgan_start() {
