--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                 </tr> 
 		  
 
-		<tr onmouseout="cgan_stop()" onmouseover="cgan_start()">
+		<tr onmouseout="climate_stop()" onmouseover="climate_start()">
 	        <td style="padding:16px;width:20%;vertical-align:middle">
 		      <div class="one">
-		        <div class="two" id='dreamfusion_image'><video  width=100% height=100% muted autoplay loop>
+		        <div class="two" id='dreamfusion_image'><video  width="160" muted autoplay loop>
 		        <source src="images/climate.mp4" type="video/mp4">
 		        Your browser does not support the video tag.
 		        </video></div>
