--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<tr onmouseout="climate_stop()" onmouseover="climate_start()">
 	        <td style="padding:16px;width:20%;vertical-align:middle">
 		      <div class="one">
-		        <div class="two" id='dreamfusion_image'><video  width="160" muted autoplay loop>
+		        <div class="two" id='climate_image'><video  width="160" muted autoplay loop>
 		        <source src="images/climate.mp4" type="video/mp4">
 		        Your browser does not support the video tag.
 		        </video></div>
