--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		    <a href="data/FNO_report">Report</a>
 		    <br>
                     <p>
-                      Developed climate prediction model for Kaggle competition in a deep learning class. Trained a Fourier Neural Operator to predict temperature and prediction for a decade given greenhouse gas emissions.
+                      Developed climate prediction model for Kaggle competition in a deep learning class. Trained a Fourier Neural Operator to predict temperature and precipitation for a decade given greenhouse gas emissions. Outperforms baseline CNN and ViT on RMSE and MAE mixture Kaggle score.
                     </p>
                   </td>
                 </tr> 
