--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <br>
                     <strong>PyTorch, FNO</strong>
                     <br>
-		    <a href="data/FNO_report">Report</a>
+		    <a href="data/FNO_report.pdf">Report</a>
 		    <br>
                     <p>
                       Developed climate prediction model for Kaggle competition in a deep learning class. Trained a Fourier Neural Operator to predict temperature and precipitation for a decade given greenhouse gas emissions. Outperforms baseline CNN and ViT on RMSE and MAE mixture Kaggle score.
