--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 		        function gd_stop() {
 		          document.getElementById('gd_image').style.opacity = "0";
 		        }
-		        climate_stop()
+		        gd_stop()
 		      </script>
 		    </td>
                   <td style="padding:8px;width:80%;vertical-align:middle">
-                    <a href="https://github.com/ccommans/ClimateEmulationModel">
+                    <a href="https://ccommans.github.io/GD">
                       <span class="papertitle">Gradient Descent Visualizer</span>
                     </a>
                     <br>
