--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	        <td style="padding:16px;width:20%;vertical-align:middle">
 		      <div class="one">
 		        <div class="two" id='gd_image'><video  width="160" muted autoplay loop>
-		        <source src="images/gd.mov" type="video/mov">
+		        <source src="images/gd.mp4" type="video/mp4">
 		        Your browser does not support the video tag.
 		        </video></div>
 		        <img src='images/climate.png' width="160">
