--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		        <source src="images/gd.mp4" type="video/mp4">
 		        Your browser does not support the video tag.
 		        </video></div>
-		        <img src='images/climate.png' width="160">
+		        <img src='images/gd.png' width="160">
 		      </div>
 		      <script type="text/javascript">
 		        function gd_start() {
