--- a/encyclopedia.html
+++ b/encyclopedia.html
@@ -1,12 +1,17 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
   <meta name="Author" content="Colin Commans">
   <title>The Encyclopedia Project</title>
   <style>
     .course h2 {
       margin-bottom: 0.5rem;
       border-bottom: 2px solid #444;
+      padding-bottom: 0.25rem;
+    }
+    h4 {
+      margin-bottom: 0.5rem;
+      border-bottom: 1px solid #444;
       padding-bottom: 0.25rem;
     }
     table {
@@ -31,16 +36,38 @@
 
   <center><h1>The Encyclopedia Project</h1></center>
   <p>
-    This is a collection of lecture notes of math courses I have taken in undergrad at UCSD, typeset from my handwritten notes with additional discussions or examples from me which helped my understanding. 
-    When I was taking these courses, resources like <a href="https://kconrad.math.uconn.edu/blurbs/">Keith Conrad's</a> were crucial for my learning, and in some sense this project is an attempt to pay it forward, if not be a blantant copy.
-    I have written the proofs in a way that helps me best understand the entire reasoning, and in particular I try to avoid phrases like "clear" and "it is obvious" unless I truly feel that fully spelling out the details is a distraction from the proof's main argument.
-    Please email me if you find any mistakes or have requests for different topics to be covered here; I fully intend to keep producing these notes for my future independent studies. 
-    Also, the order of topics loosely follows how I took them in undergrad, but beyond that there is no information to extrapolate from how the courses are organized (e.g. difficulty, personal preference, rigor, etc.).
+    This is a collection of lecture notes from my undergrad at UCSD, typeset from my handwritten notes with additional discussions or examples that help my understanding. 
+    When I was taking these courses, resources like <a href="https://kconrad.math.uconn.edu/blurbs/" target="_blank">Keith Conrad's</a> were crucial for my learning, and in some sense this project is an attempt to pay it forward, if not be a blatant copy.
+    I have written the proofs in a way that helps me best understand the entire reasoning, and in particular I try to avoid phrases like "clear" and "it is obvious" unless I feel that spelling out the details in full is a distraction from the proof's main argument.
+    Please <a href="mailto:colinwcommans@gmail.com">email me</a> if you find any mistakes or have requests for different topics to be covered here; I fully intend to keep producing these notes for my future independent studies.
   </p>
 
   <!-- =========================== -->
   <section class="course">
-    <h2>Abstract Algebra (MATH 100)</h2>
+    <h2>Abstract Algebra </h2>
+    <h4>MATH 100A — Group Theory</h4>
+    <table>
+      <tbody>
+        <tr>
+          <td><a href="encyclopedia/100a-1.pdf">1 — </a></td>
+          <td><a href="encyclopedia/100a-2.pdf">2 — </a></td>
+          <td><a href="encyclopedia/100a-3.pdf">3 — </a></td>
+          <td><a href="encyclopedia/100a-4.pdf">4 — </a></td>
+        </tr>
+      </tbody>
+    </table>
+    <h4>MATH 100B — Ring Theory</h4>
+    <table>
+      <tbody>
+        <tr>
+          <td><a href="encyclopedia/100b-1.pdf">1 — </a></td>
+          <td><a href="encyclopedia/100b-2.pdf">2 — </a></td>
+          <td><a href="encyclopedia/100b-3.pdf">3 — </a></td>
+          <td><a href="encyclopedia/100b-4.pdf">4 — </a></td>
+        </tr>
+      </tbody>
+    </table>
+    <h4>MATH 100C — Field & Galois Theory</h4>
     <table>
       <tbody>
         <tr>
@@ -55,19 +82,69 @@
 
   <!-- =========================== -->
   <section class="course">
-    <h2>Real Analysis (MATH 140)</h2>
+    <h2>Real Analysis </h2>
+    <h4>MATH 140A — The Real Numbers</h4>
     <table>
       <tbody>
         <tr>
-          <td><a href="encyclopedia/140b-1.pdf">1 —Differentiation</a></td>
+          <td><a href="encyclopedia/140a-1.pdf">1 — What is Analysis? </a></td>
+          <td><a href="encyclopedia/140a-2.pdf">2 — Constructing ℝ </a></td>
+          <td><a href="encyclopedia/140a-3.pdf">3 — Properties of ℝ </a></td>
+          <td><a href="encyclopedia/140a-4.pdf">4 — Beyond ℝ </a></td>
+        </tr>
+      </tbody>
+    </table>
+    <h4>MATH 140B — Differentiation & Integration</h4>
+    <table>
+      <tbody>
+        <tr>
+          <td><a href="encyclopedia/140b-1.pdf">1 — Differentiation</a></td>
           <td><a href="encyclopedia/140b-2.pdf">2 —  </a></td>
           <td><a href="encyclopedia/140b-3.pdf">3 —  </a></td>
           <td><a href="encyclopedia/140b-4.pdf">4 —  </a></td>
         </tr>
       </tbody>
     </table>
+    <h4>MATH 140C — Multivariable Analysis & Measure Theory</h4>
+    <table>
+      <tbody>
+        <tr>
+          <td><a href="encyclopedia/140c-1.pdf">1 — </a></td>
+          <td><a href="encyclopedia/140c-2.pdf">2 —  </a></td>
+          <td><a href="encyclopedia/140c-3.pdf">3 —  </a></td>
+          <td><a href="encyclopedia/140c-4.pdf">4 —  </a></td>
+        </tr>
+      </tbody>
+    </table>
   </section>
 
+  <!-- =========================== -->
+  <section class="course">
+    <h2>Topology </h2>
+    <h4>MATH 190A — Point-Set Topology</h4>
+    <table>
+      <tbody>
+        <tr>
+          <td><a href="encyclopedia/190a-1.pdf">1 — </a></td>
+          <td><a href="encyclopedia/190a-2.pdf">2 —  </a></td>
+          <td><a href="encyclopedia/190a-3.pdf">3 —  </a></td>
+          <td><a href="encyclopedia/190a-4.pdf">4 —  </a></td>
+        </tr>
+      </tbody>
+    </table>
+    <h4>MATH 190B — Algebraic Topology</h4>
+    <table>
+      <tbody>
+        <tr>
+          <td><a href="encyclopedia/190b-1.pdf">1 — </a></td>
+          <td><a href="encyclopedia/190b-2.pdf">2 —  </a></td>
+          <td><a href="encyclopedia/190b-3.pdf">3 —  </a></td>
+          <td><a href="encyclopedia/190b-4.pdf">4 —  </a></td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 
-</body>
-</html>
+<br>
+<a href="/"> Back to Home </a>
+</body></html>
