--- a/index.html
+++ b/index.html
@@ -274,6 +274,8 @@
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <a href="/encyclopedia.html">The Encyclopedia Project (Past Lecture Notes)</a>
+                <br>
+                <a href="/artin.html">My Solutions to <i>Algebra</i> by Michael Artin</a>
               </td>
             </tr>
             
