Artin ch2 added
Added solutions to chapter 2 of Artin, also updated artin homepage to give WIP updates

--- a/artin.html
+++ b/artin.html
@@ -51,11 +51,13 @@
   <h1>Solutions to Artin's <i>Algebra</i>, 2nd ed.</h1>
 
   <p>
-    This project is a complete, carefully typeset solution set to Michael Artin's
+    This project is (planned to be) a complete, carefully typeset solution set to Michael Artin's
     <i>Algebra (2nd Edition)</i>. 
-    The PDFs below correspond to each chapter with a hyperlinked table of contents,
+    The PDFs below correspond to each chapter with a hyperlinked table of contents.
     Feel free to reach out via
-    <a href="mailto:colinwcommans@gmail.com">email</a> with corrections or suggestions.
+    <a href="mailto:colinwcommans@gmail.com">email</a> with corrections or suggestions. 
+    I am currently working on this project in my spare time, so please be patient as I continue to add more chapters,
+    and in the meantime feel free to visit <a href="https://brianbi.ca/artin">Brian Bi's solutions to selected exercises</a>.
   </p>
 
   <section class="book">
@@ -69,46 +71,46 @@
           <td><a href="artin/artin_ch2.pdf">Chapter 2 — Groups</a></td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch3.pdf">Chapter 3 — Vector Spaces</a></td>
+          <td>Chapter 3 — Vector Spaces</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch4.pdf">Chapter 4 — Linear Operators</a></td>
+          <td>Chapter 4 — Linear Operators</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch5.pdf">Chapter 5 — Applications of Linear Operators</a></td>
+          <td>Chapter 5 — Applications of Linear Operators</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch6.pdf">Chapter 6 — Symmetry</a></td>
+          <td>Chapter 6 — Symmetry</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch7.pdf">Chapter 7 — More Group Theory</a></td>
+          <td>Chapter 7 — More Group Theory</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch8.pdf">Chapter 8 — Bilinear Forms</a></td>
+          <td>Chapter 8 — Bilinear Forms</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch9.pdf">Chapter 9 — Linear Groups</a></td>
+          <td>Chapter 9 — Linear Groups</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch10.pdf">Chapter 10 — Group Representations</a></td>
+          <td>Chapter 10 — Group Representations</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch11.pdf">Chapter 11 — Rings</a></td>
+          <td>Chapter 11 — Rings</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch12.pdf">Chapter 12 — Factoring</a></td>
+          <td>Chapter 12 — Factoring</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch13.pdf">Chapter 13 — Quadratic Number Fields</a></td>
+          <td>Chapter 13 — Quadratic Number Fields</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch14.pdf">Chapter 14 — Linear Algebra in a Ring</a></td>
+          <td>Chapter 14 — Linear Algebra in a Ring</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch15.pdf">Chapter 15 — Fields</a></td>
+          <td>Chapter 15 — Fields</td>
         </tr>
         <tr>
-          <td><a href="artin/artin_ch16.pdf">Chapter 16 — Galois Theory</a></td>
+          <td>Chapter 16 — Galois Theory</td>
         </tr>
       </tbody>
     </table>
